--- a/shard.yml
+++ b/shard.yml
@@ -7,8 +7,7 @@ authors:
 dependencies:
   optarg:
     github: mosop/optarg
-    branch: edge
-    # version: ~> 0.1.11
+    version: ~> 0.1.12
   string_inflection:
     github: mosop/string_inflection
     version: ~> 0.1.0
