--- a/shard.yml
+++ b/shard.yml
@@ -7,7 +7,7 @@ authors:
 dependencies:
   optarg:
     github: mosop/optarg
-    version: 0.3.1
+    version: ~> 0.3.2.0
   string_inflection:
     github: mosop/string_inflection
     version: ~> 0.1.7
