--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 /doc/
-/libs/
 /.crystal/
 /.shards/
-
+/lib
 
 # Libraries don't need dependency lock
 # Dependencies will be locked in application that uses them
 /shard.lock
-
