--- a/shard.yml
+++ b/shard.yml
@@ -1,13 +1,15 @@
 name: cli
-version: 0.5.1.5
+version: 0.6.0
 
 authors:
   - mosop
 
+crystal: 0.20.4
+
 dependencies:
   optarg:
     github: mosop/optarg
-    version: 0.4.2.9
+    version: 0.5.0
   string_inflection:
     github: mosop/string_inflection
     version: ~> 0.2.0
