--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: cli
-version: 0.6.7
+version: 0.6.8
 
 authors:
   - mosop
@@ -13,5 +13,13 @@ dependencies:
   string_inflection:
     github: mosop/string_inflection
     version: ~> 0.2.0
+
+development_dependencies:
+  have_files:
+    github: mosop/have_files
+    version: ~> 0.3.2
+  crystal_plus:
+    github: mosop/crystal_plus
+    version: ~> 0.1.3
 
 license: MIT
