--- a/shard.yml
+++ b/shard.yml
@@ -8,7 +8,7 @@ crystal: 0.30.0
 
 dependencies:
   optarg:
-    github: drujensen/optarg
+    github: amberframework/optarg
     version: ~> 0.7.0
   string_inflection:
     github: mosop/string_inflection
